--- a/book/pages/03-B.md
+++ b/book/pages/03-B.md
@@ -1,5 +1,8 @@
 # 日志栈
-本节讨论日志栈，目的不在于展示一种实际常用的数据结构，而在于阐述一种技术思想。
+本节讨论日志栈，目的不在于展示一种具体的数据结构，而在于阐述一种技术思想。  
+写入操作总是作用于栈顶，而读取操作则从栈顶向栈底遍历。弹栈操作是不存在的，用整理合并来减少栈的层数。
+
+## 一个简单的例子
 ```go
     type logStack struct {
         cache layer             //活跃区
@@ -7,7 +10,7 @@
         stack []layer           //非活跃区
     }
 ```
-　　日志栈包含一块活跃区以及一个栈式的非活跃区，增删操作都以修改日志的形式存储。操作首先在容量有限的活跃区进行，活跃区满时会被压入非活跃区。
+　　此结构包含一块活跃区以及一个栈式的非活跃区，增删操作都以修改日志的形式存储。操作首先在容量有限的活跃区进行，活跃区满时会被压入非活跃区。
 ```go
     func (ls *logStack) push() {
         ls.stack = append(ls.stack, ls.cache)
